# embedded-android

./: build.gradle  gradle.properties  local.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yolov5.h  yolov5ncnn_jni.cpp
app/src/main/java/car/Identify/: UsingUtil.java
app/src/main/java/car/Identify/constant/: ColorConstant.java  IdentifyConstant.java  LicenseColorConstant.java  LightConstant.java  QRCodeColorConstant.java  VehicleConstant.java
app/src/main/java/car/Identify/models/: LicenseColorModel.java  LicenseModel.java  LightModel.java  (+7 more)
app/src/main/java/im/fyhz/: MessageData.java
app/src/main/java/im/hdy/: CarData.java
app/src/main/res/anim/: list_anim.xml  push_up_in.xml  push_up_out.xml
app/src/main/res/drawable/: barcolor.xml  cut_pic_ic.xml  ic_back.xml  ic_four_ic.xml  ic_inferad.xml  ic_one_ic_port.xml  ic_save.xml  ic_uploading.xml  ic_zigbee.xml  returnbutton_icon.xml  title_color.xml  translucence_bg_lucency.xml
app/src/main/res/layout/: activity_first1.xml  activity_infrared.xml  activity_login.xml  dialog_image.xml  infrared_item.xml  item_car.xml  item_holder.xml  left_fragment.xml  other_item.xml  picinformation_fragment.xml  right_fragment1.xml  right_infrared_fragment.xml  right_other_fragment.xml  right_zigbee_fragment.xml  zigbee_item.xml
app/src/main/res/menu/: navigation_menu.xml  tool_rightitem.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  values.xml
gradle/wrapper/: gradle-wrapper.properties
(+146 files in other folders)
